// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`padding logical properties to be transformed padding-inline-end to be transformed to fallback 1`] = `
"
        padding-inline-end: 50px;
        @supports not (padding-inline-end: 50px) {
            [dir=ltr] & {
                padding-right: 50px;
            }
            
            [dir=rtl] & {
                padding-left: 50px;
            }
        }
    "
`;

exports[`padding logical properties to be transformed padding-inline-start to be transformed to fallback 1`] = `
"
        padding-inline-start: 50px;
        @supports not (padding-inline-start: 50px) {
            [dir=ltr] & {
                padding-left: 50px;
            }
            
            [dir=rtl] & {
                padding-right: 50px;
            }
        }
    "
`;
